# C-Asteroid

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  compile.bat
include/audio/: audio_main.h
include/game/: functions.h  game_main.h
include/structs/: asteroid.h  bullet.h  list.h  particle.h  player.h
include/video/: shader.h  shader.h.in  video_main.h
shader/: main.fs
src/: main.c
src/audio/: CMakeLists.txt  audio_main.c
src/game/: CMakeLists.txt  functions.c  game_main.c
src/structs/: CMakeLists.txt  asteroid.c  bullet.c  list.c  particle.c  player.c
src/video/: CMakeLists.txt  video_main.c
web/: shell_minimal.html
